<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CFC_Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="sync">Sync</string>
    <string name="startedMonitoring">Started monitoring activity</string>
    <string name="stoppedMonitoring">Stopped monitoring activity</string>
    <string name="startAtDropoff">edu.berkeley.eecs.cfc_tracker.startMonitoring_dropoff</string>
    <string name="stopAtDropoff">edu.berkeley.eecs.cfc_tracker.stopMonitoring_dropoff</string>
    <string name="startAtPickup">edu.berkeley.eecs.cfc_tracker.startMonitoring_pickup</string>
    <string name="stopAtPickup">edu.berkeley.eecs.cfc_tracker.stopMonitoring_pickup</string>
    <string name="registerGeofence">Geofence</string>
    <string name="carConnect">Connect car</string>
    <string name="carDisconnect">Disconnect car</string>


    <!-- Added from activity recognition sample -->
    <string name="app_description">Demonstrates activity recognition</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="connected">Connected to Location Services</string>
    <string name="disconnected">Disconnected from Location Services</string>
    <string name="connection_failed">Connection to service failed: error code %1$d</string>
    <string name="log_file_deletion_error">Log file deletion error.</string>
    <string name="notification_title">You are moving</string>
    <string name="turn_on_GPS">Click to turn on GPS, or swipe to ignore</string>
    <string name="activity_updates_requested">Activity updates requested</string>
    <string name="service_not_connected">Not connected to Location Services</string>
    <string name="activity_updates_stop">Stopping activity update requests</string>
    <string name="log_message">Log: timestamp: %1$s type %2$s confidence %3$d</string>
    <string name="menu_item_clearlog">Clear Log</string>
    <string name="menu_item_showlog">Show Log</string>
    <string name="logs_deleted">Log file(s) deleted</string>
    <string name="start_updates">Start Updates</string>
    <string name="stop_updates">Stop Updates</string>
    <string name="play_services_available">Location Services is available</string>
    <string name="invalid_action">Invalid action received. See error log for details.</string>
    <string name="invalid_action_detail">Invalid action %1$s received.</string>
    <string name="unknown">--Unknown--</string>
    <string name="no_log_data">No log data is available</string>
    <string name="activity_recognition_error_detail">
        Activity recognition error, code %1$d message %2$s.
    </string>
    <string name="date_format_error">Internal error: date formatting exception.</string>
    <string name="log_filename">%1$s%2$s%3$d%4$s</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="unknown_activity_request_code">
        Received an unknown activity request code %1$d in onActivityResult.
    </string>
    
    <!--  Trip tracking machine states and transitions -->
    <string name="state_start">local.state.start</string>
    <string name="state_waiting_for_trip_start">local.state.waiting_for_trip_start</string>
    <string name="state_ongoing_trip">local.state.ongoing_trip</string>

    <string name="transition_initialize">local.transition.initialize</string>
    <string name="transition_exited_geofence">local.transition.exited_geofence</string>
    <string name="transition_stopped_moving">local.transition.stopped_moving</string>
    <string name="transition_stop_tracking">local.transition.stop_tracking</string>
<!--    <string name="transition_actions_started">local.transition.actions_started</string>
    <string name="transition_actions_complete">local.transition.actions_complete</string> -->

    <string name="broadcast_extra_key_old_state">broadcast.extra.key.old_state</string>
    <string name="broadcast_extra_key_new_state">broadcast.extra.key.new_state</string>

    <string name="user_preferences_key_username">user.preferences.key.username</string>

    <string name="clear">Clear DB</string>
    <string name="login">Login to google</string>
    <string name="exportDB">Export DB</string>

    <!-- Added from activity OBD -->
    <string name="connectButton">Connect</string>
    <string name="DisconnectButton">Disconnect</string>
    <string name="modeSwitch">Mode</string>
    <string name="Rpm">Rpm</string>
    <string name="Speed">Speed</string>
    <string name="ODO">ODO</string>
    <string name="fuelFlow">Fuel flow</string>
    <string name="fuelEco">Fuel economy</string>
    <string name="rpm">rpm</string>
    <string name="speed">speed</string>
    <string name="fuelEco1">fuelEco</string>
    <string name="fuelFlow1">fuelFlow</string>
    <string name="nullKm">0 Km</string>
    <string name="nullL">0 L</string>
    <string name="FuelCounter">Fuel consumed</string>
    <string name="BeginQuestion">What is your car running on?</string>
    <string name="EndQuestion">What kind of trip have you done?</string>
    <string name="cannotConnect">Unable to connect, try again</string>
    <string name="blueChose">Choose Bluetooth device</string>

    <string-array
        name="string_array_trips">
        <item>School</item>
        <item>City</item>
        <item>Groceries</item>
        <item>Highway</item>
        <item>Gas station</item>
        <item>trip A</item>
        <item>trip B</item>

    </string-array>
</resources>
