<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/rpm"
        android:id="@+id/textViewRpm"
        android:layout_above="@+id/speedLabel"
        android:layout_toEndOf="@+id/button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/speed"
        android:id="@+id/textViewSpeed"
        android:layout_alignTop="@+id/speedLabel"
        android:layout_alignStart="@+id/textViewRpm" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/fuelEco1"
        android:id="@+id/textViewFuelEco"
        android:layout_alignTop="@+id/economyLabel"
        android:layout_alignStart="@+id/textViewSpeed" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/fuelFlow1"
        android:id="@+id/textViewFlow"
        android:layout_alignBottom="@+id/flowLabel"
        android:layout_marginTop="25dp"
        android:layout_alignStart="@+id/textViewSpeed" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Rpm"
        android:id="@+id/rpmLabel"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Speed"
        android:id="@+id/speedLabel"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/rpmLabel"
        android:layout_alignStart="@+id/rpmLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/fuelEco"
        android:id="@+id/economyLabel"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/fuelFlow"
        android:id="@+id/flowLabel"

        android:layout_below="@+id/economyLabel"
        android:layout_marginTop="25dp"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connectButton"
        android:id="@+id/button"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Fuel Type"
        android:id="@+id/textViewFuelType"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ODO"
        android:id="@+id/labelODO"
        android:layout_alignBottom="@+id/textViewODO"
        android:layout_marginTop="25dp"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nullKm"
        android:id="@+id/textViewODO"
        android:layout_below="@+id/textViewFlow"
        android:layout_alignStart="@+id/textViewFlow"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/FuelCounter"
        android:id="@+id/labelConsumed"
        android:layout_below="@+id/labelODO"
        android:layout_marginTop="25dp"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nullL"
        android:id="@+id/textViewConsumed"
        android:layout_alignBottom="@+id/textViewFuelType"
        android:layout_alignStart="@+id/textViewODO"
        android:layout_alignTop="@+id/labelConsumed" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modeSwitch"
        android:id="@+id/switchMode"
        android:layout_below="@+id/button"
        android:checked="true"
        android:textOn="fine"
        android:textOff="coarse"
        android:layout_toEndOf="@+id/flowLabel" />

</RelativeLayout>