<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:launchMode="singleTask"
    android:excludeFromRecents="true">

    <TextView
        android:id="@+id/status_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/status_textview"
        android:layout_marginStart="27dp"
        android:layout_toEndOf="@+id/button1"
        android:onClick="stopTracking"
        android:text="@string/stop" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/status_textview"
        android:layout_marginRight="36dp"
        android:onClick="forceSync"
        android:text="@string/sync" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/status_textview"
        android:layout_below="@+id/status_textview"
        android:onClick="startTracking"
        android:text="@string/start" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/button3"
        android:onClick="clearDb"
        android:text="@string/clear"
        android:layout_below="@+id/button1" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/button5"
        android:onClick="refreshLog"
        android:text="Refresh"
        android:layout_below="@+id/button1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/loginButton"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button1"
        android:onClick="loginToGoogle" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exportDB"
        android:id="@+id/exportButton"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/loginButton"
        android:onClick="exportDatabaseLogs" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/log_textview"
        android:scrollbars = "vertical|horizontal"
        android:layout_centerVertical="true"
        android:layout_below="@+id/exportButton"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carConnect"
        android:id="@+id/button"
        android:layout_alignTop="@+id/exportButton"
        android:layout_toEndOf="@+id/loginButton"
        android:onClick="connectToCar" />

</RelativeLayout>